work around layout bug in IE
see https://connect.microsoft.com/IE/feedback/details/802625/min-height-and-flexbox-flex-direction-column-dont-work-together-in-ie-10-11-preview

--- a/meinberlin/assets/scss/components/_hero_unit.scss
+++ b/meinberlin/assets/scss/components/_hero_unit.scss
@@ -13,11 +13,14 @@
     color: $text-color-inverted;
 
     @media (min-width: $breakpoint) {
-        min-height: ($hero-height-mobile + $hero-height) / 2;
+        // HACK: We would prefer to use min-height to allow extremly long
+        // content.  However, in IE, flex is buggy when used with min-height.
+        // We expect the content to be short, so this should be fine.
+        height: ($hero-height-mobile + $hero-height) / 2;
     }
 
     @media (min-width: $breakpoint-md) {
-        min-height: $hero-height;
+        height: $hero-height;
     }
 
     &:before {
